--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "hatchling.build"
 
 [project]
 name = "pytusm"
-version = "0.0.2"
-description = "A small example package"
+version = "0.0.3"
+description = "A package"
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
